# SH-Learning-AI

./: .dockerignore  .env.example  .flake8  .gitignore  =1.0.0  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Makefile  README.md  nohup.out  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_import.py
.devcontainer/: Dockerfile  devcontainer.json  start_comfyui.sh
data/: archive_index.json
deploy/: docker-entrypoint.sh
docs/: AI_ML_QUICK_REFERENCE.md  AI_ML_TECHNOLOGY_ANALYSIS.md  API.md  ARCHITECTURE.md  AUDIO_IMPLEMENTATION_SUMMARY.md  AUDIO_QUICK_REFERENCE.md  AUDIO_SETUP_GUIDE.md  AUDIO_TRANSCRIPTION_IMPLEMENTATION_PLAN.md  BEST_PRACTICES.md  HYBRID_REPORTS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATED_AUDIO_IMPLEMENTATION_PLAN.md  INTEGRATED_AUDIO_IMPLEMENTATION_PLAN_PART2.md  INTEGRATED_AUDIO_IMPLEMENTATION_PLAN_PART3.md  LEARNING_FRAMEWORKS_EXPLAINED.md  MULTI_BRIDGE_SETUP.md  QUICK_START.md  REPORT_GENERATION.md  REPORT_QUALITY_ASSESSMENT.md  STORY_GENERATION.md  VLLM_PRODUCTION_RESEARCH.md  linkedin_article_ai_education_leadership.md  linkedin_article_leadership_ai.md  social_media_promotion_posts.md
examples/: mission_recording_demo.py
scripts/: archive_data.py  download_whisper_models.py  generate_all_reports.py  generate_mission_report.py  list_audio_devices.py  microphone_test.py  ollama_setup.py  playback_recording.py  reanalyze_recording.py  record_audio_only.py  record_complete_telemetry.py  record_game.py  record_game_enhanced.py  record_mission_with_audio.py  record_unified_telemetry.py  run_web_server.py  speaker_test.py  test_WSL2.py  test_all_packets_manual.py  test_audio.py  test_browser_mimic_manual.py  test_console_role_manual.py  test_engineer_packets_manual.py  test_enhanced_report.py  test_narrative_engine.py  test_realtime_audio.py  test_station_connection_manual.py  test_subsegment_diarization.py  test_tactical_packets_manual.py  test_telemetry_quick.py  test_vessel_packet_manual.py  test_vessel_tactical_manual.py  vllm_setup.py  (+1 more)
(+212 files in other folders)
